Scrollbar fix & fixed title (for bots)
And a few more tweaks.

--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ p:first-child { margin-bottom: 0.5ex; }
 
 body > div { flex-shrink: 0; width: 100%; margin: auto; max-width: 100%; }
 
-#timeline     { height: 200px; }
+#timeline     { height: 206px; }
 #controls-row { height: 3ex; }
 #text-row {
   background: #111; flex: auto; overflow-y: overlay;
@@ -53,21 +53,23 @@ body > div { flex-shrink: 0; width: 100%; margin: auto; max-width: 100%; }
 #text { padding: 1px 0 1px calc(100vw - 100%); }
 /* Hack#2: style the scrollbar */
 html { --scrollbarBG: #111; --thumbBG: #444; }
+body::-webkit-scrollbar,
 #text-row::-webkit-scrollbar { width: 11px; }
 #text-row {
   scrollbar-width: thin;
   scrollbar-color: var(--thumbBG) var(--scrollbarBG);
 }
+body::-webkit-scrollbar-track,
 #text-row::-webkit-scrollbar-track { background: var(--scrollbarBG); }
+body::-webkit-scrollbar-thumb,
 #text-row::-webkit-scrollbar-thumb {
   background-color: var(--thumbBG);
   /* border: 3px solid var(--scrollbarBG); broken? */
-  border-radius: 6px;
-  box-shadow: inset 0 0 7px black;
+  border-radius: 6px; box-shadow: inset 0 0 7px black;
 }
 
 #controls {
-  height: 3ex; margin-top: -1ex; border-bottom: solid 1ex #444;
+  height: 3ex; margin-top: -0.5ex; border-bottom: solid 0.5ex #444;
   display: flex; flex-direction: row; justify-content: space-between;
 }
 #controls button {
@@ -87,7 +89,8 @@ html { --scrollbarBG: #111; --thumbBG: #444; }
 }
 
 #toc {
-  position: fixed; right: 0; margin: 10px; overflow: hidden; min-height: 8em;
+  position: fixed; z-index: 1; right: 0; overflow: hidden; min-height: 8em;
+  margin: 10px 5px 10px 10px;
   font-size: 50%; white-space: nowrap; backdrop-filter: blur(10px);
 }
 #toc-header {
@@ -131,11 +134,12 @@ html { --scrollbarBG: #111; --thumbBG: #444; }
 
 @media screen and (max-height: 300px) {
   #timeline { display: none; }
-  #controls-row { height: 4ex; } #controls { margin-top: 0; }
+  #controls-row { height: 3.5ex; } #controls { margin-top: 0; }
 }
 
-@media screen and (min-height: 300px) and (max-height: 600px) {
-  html, body { height: unset; }
+@media screen and (min-height: 300px) and (max-height: 700px) {
+  html, body { height: unset; overflow-y: overlay; }
+  #text-row { overflow-y: hidden; }
 }
 
 @media print {
